Fixed bootstrap grids for mobile scenebuttons, no more overlap

--- a/src/pages/VideoOne/style.css
+++ b/src/pages/VideoOne/style.css
@@ -12,6 +12,20 @@
   100% { transform: translate(2px, 0px) rotate(0deg); }
 }
 
+@keyframes reverseshuffle {
+  0% { transform: translate(-2px, 0px) rotate(0deg); }
+  10% { transform: translate(2px, 0px) rotate(0deg); }
+  20% { transform: translate(-2px, 0px) rotate(0deg); }
+  30% { transform: translate(2px, 0px) rotate(0deg); }
+  40% { transform: translate(-2px, 0px) rotate(0deg); }
+  50% { transform: translate(2px, 0px) rotate(0deg); }
+  60% { transform: translate(-2px, 0px) rotate(0deg); }
+  70% { transform: translate(2px, 0px) rotate(0deg); }
+  80% { transform: translate(-2px, 0px) rotate(0deg); }
+  90% { transform: translate(2px, 0px) rotate(0deg); }
+  100% { transform: translate(-2px, 0px) rotate(0deg); }
+}
+
 body {
     text-align : center;
     background-color: antiquewhite;
@@ -24,7 +38,16 @@ body {
   border-radius: 100%;
   margin-left: 10px;
   margin-right: 10px;
+}
+
+#lastSceneIcon {
   animation-name: shuffle;
+  animation-duration: 5.0s;
+  animation-iteration-count: infinite;
+}
+
+#nextSceneIcon {
+  animation-name: reverseshuffle;
   animation-duration: 5.0s;
   animation-iteration-count: infinite;
 }
